# render

./: BlitRenderer.cpp  BlitRendererArray.cpp  BufferWrappers.cpp  CMakeLists.txt  Colors.cpp  DebugRenderer.cpp  Fonts.cpp  GLEnabler.cpp  GLStateWrapper.cpp  HighlightRenderer.cpp  Main.cpp  RenderInfoBase.cpp  Renderer.cpp  RendererTemplate.cpp  SRGBConversion.cpp  TextRenderer.cpp  UIBackgroundRenderer.cpp
include/render/: BlitRenderer.h  BlitRendererArray.h  BufferWrappers.h  CachedValue.h  Colors.h  DebugRenderer.h  Enums.h  Fonts.h  GLEnabler.h  GLStateWrapper.h  HighlightRenderer.h  RenderInfoBase.h  Renderer.h  RendererTemplate.h  SRGBConversion.h  TextRenderer.h  UIBackgroundRenderer.h
include/render/infos/: BlitArrayRenderInfo.h  BlitRenderInfo.h  CameraInfo.h  DebugRenderInfo.h  HighlightRenderInfo.h  RenderInfo.h  TextRenderInfo.h  TileRenderInfo.h  UIRenderInfo.h
include/render/infos/proxy/: UIInfos.h
include/render/loaders/: ModelLoader.h  ShaderLoader.h  TextureLoader.h  vboindexer.h
include/render/textures/: BlockIDTextures.h
infos/: BlitArrayRenderInfo.cpp  BlitRenderInfo.cpp  CameraInfo.cpp  DebugRenderInfo.cpp  HighlightRenderInfo.cpp  RenderInfo.cpp  TextRenderInfo.cpp  TileRenderInfo.cpp  UIRenderInfo.cpp
infos/proxy/: UIInfos.cpp
loaders/: ModelLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp  vboindexer.cpp
shaders/: Blit.frag  Blit.vert  BlitArray.frag  BlitArray.vert  Debug.frag  Debug.vert  Highlight.vert  UIBackground.frag  UIBackground.vert  hello.frag  hello.vert
src/: BlitRenderer.cpp  BufferWrappers.cpp
src/infos/: TextRenderInfo.cpp
src/loaders/: ShaderLoader.cpp  vboindexer.cpp
textures/: BlockIDTextures.cpp
